--- a/YouthSongbook/Resources/layout/UpdateLayout.axml
+++ b/YouthSongbook/Resources/layout/UpdateLayout.axml
@@ -8,4 +8,10 @@
         p1:layout_width="match_parent"
         p1:layout_height="wrap_content"
         p1:id="@+id/updateButton" />
+    <CheckBox
+        p1:text="Show Chords"
+        p1:layout_width="383.6dp"
+        p1:layout_height="wrap_content"
+        p1:layout_below="@id/updateButton"
+        p1:id="@+id/chordsCheckBox" />
 </RelativeLayout>
