--- a/YouthSongbook/Resources/layout/UpdateLayout.axml
+++ b/YouthSongbook/Resources/layout/UpdateLayout.axml
@@ -10,9 +10,16 @@
         p1:id="@+id/updateButton" />
     <CheckBox
         p1:text="Show Chords"
-        p1:layout_width="383.6dp"
+        p1:layout_width="match_parent"
         p1:layout_height="wrap_content"
         p1:layout_below="@id/updateButton"
         p1:id="@+id/chordsCheckBox"
         p1:layout_marginTop="45px" />
+    <CheckBox
+        p1:text="High Contrast Mode"
+        p1:layout_width="match_parent"
+        p1:layout_height="wrap_content"
+        p1:id="@+id/contrastCheckBox"
+        p1:layout_marginTop="20px"
+        p1:layout_below="@id/chordsCheckBox" />
 </RelativeLayout>
