Swapping out the update button to auto-update switch

--- a/YouthSongbook/Resources/layout/UpdateLayout.axml
+++ b/YouthSongbook/Resources/layout/UpdateLayout.axml
@@ -3,14 +3,8 @@
     p1:layout_width="match_parent"
     p1:layout_height="match_parent"
     p1:id="@+id/relativeLayout1">
-    <Button
-        p1:text="Update"
-        p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/updateButton" />
     <Switch
         p1:layout_height="wrap_content"
-        p1:layout_below="@id/updateButton"
         p1:id="@+id/chordSwitch"
         p1:layout_alignParentRight="true"
         p1:text="Show Chords"
@@ -30,4 +24,14 @@
         p1:layout_marginRight="50px"
         p1:layout_marginTop="20px"
         p1:text="High Contrast" />
+    <Switch
+        p1:layout_width="match_parent"
+        p1:layout_height="wrap_content"
+        p1:layout_below="@id/hcSwitch"
+        p1:id="@+id/autoUpdateSwitch"
+        p1:text="Auto Update"
+        p1:layout_marginBottom="20px"
+        p1:layout_marginLeft="50px"
+        p1:layout_marginRight="50px"
+        p1:layout_marginTop="20px" />
 </RelativeLayout>
