--- a/YouthSongbook/Resources/layout/Main.axml
+++ b/YouthSongbook/Resources/layout/Main.axml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
+    android:minHeight="25px"
+    android:id="@+id/mainLayout">
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
